<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cuentas"
            android:icon="@mipmap/account50"
            android:title="@string/item_cuentas"/>
        <item
            android:id="@+id/nav_tarifas"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/item_tarifas" />
        <item
            android:id="@+id/nav_lecturas"
            android:title="Lecturas"
            android:icon="@mipmap/lecturas" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_cerrar"
                android:icon="@mipmap/salir"
                android:title="@string/item_sesion" />
        </menu>
    </item>

</menu>
