<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuentasFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="425dp"
        android:layout_marginTop="25dp"
        android:paddingTop="25dp" >

        <Button
            android:id="@+id/btn_solicitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_solicitar"
            android:padding="25dp"/>

        <Button
            android:id="@+id/btn_listar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_listar"
            android:padding="25dp"/>

    </LinearLayout>

</FrameLayout>